--- a/sumup/dbt_project.yml
+++ b/sumup/dbt_project.yml
@@ -33,6 +33,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   sumup:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    +materialized: table
+    staging:
+      schema: staging_dataset
